--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../TemplateData/style.css">
-    <title>Document</title>
+    <title>Team Elks</title>
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -29,25 +30,30 @@
         </nav>
     </header>
     <main>
-        <div>
+      <div class="introduction">
+        <div class="intro-text github">
             <h2> Welcome to Team Elks website!</h2>
             <p> 
                 We are team elks from the kth course II1305. Our project is a multiplayer game 
                 made in unity mainly inspired by the board game robot rally.
             </p>
-        </div>
-        <div class="github-link">
-            <a href="https://www.github.com/robotelks">
-                <i>github link here</i>
+            <a href="https://www.github.com/robotelks" class="github-link" href title="Github">
+              Github
+              <i class="fab fa-github"></i>
             </a>
         </div>
-        <div>
-            <h3> Sprint 1</h3>
-            <h3> Sprint 2</h3>
-            <h3> Sprint 3</h3>
-            <h3> Sprint 4</h3>
+        <div class="intro-icon">
+          <figure>
+            <img src="TemplateData/deer.png" alt="Picture of an Elk!">
+          </figure>
         </div>
-
+      </div>
+      <div>
+          <h3> Sprint 1</h3>
+          <h3> Sprint 2</h3>
+          <h3> Sprint 3</h3>
+          <h3> Sprint 4</h3>
+      </div>
     </main>
 </body>
 </html>
