Added html and css, basicly finished site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../TemplateData/style.css">
         <title>Team Elks</title>
-        <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/124a36c513.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <section id="about">
@@ -17,21 +17,21 @@
                 <div class="logo">Team Elks</div>
                 <ul class="navbar">
                     <li>
-                        <a href="#Sprint" class="
+                        <a href="#sprint" class="
                         nav-link
                         link-hover
                         link-hover-black
                         ">Sprint</a>
                     </li>
                     <li>
-                        <a href="" class="
+                        <a href="#project" class="
                         nav-link
                         link-hover
                         link-hover-black
                         ">Project</a>
                     </li>
                     <li>
-                        <a href="" class="
+                        <a href="mailto:mille.af.rolen@gmail.com" class="
                         nav-link
                         nav-link-primary
                         ">Contact</a>
@@ -63,28 +63,137 @@
                             </a>
                         </div>
                     </div>
-                    <figure class="about-me-img-container">
-                        <img src="./assets/undraw_ukraine.svg" class="about-me-img" alt="">
-                    </figure>
+                </div>
+                    <div class="member-list">
+                        <div class="team-info">
+                            <ul class="team-list">
+                                <h2 class="team-list-title">Member List: </h2>
+                                <li class="team-items">
+                                    Robin Claesson
+                                </li>
+                                <li class="team-items">
+                                    Mille af Rolén
+                                </li>
+                                <li class="team-items">
+                                    Folke Andrae
+                                </li>
+                                <li class="team-items">
+                                    Leo Hansson
+                                </li>
+                                <li class="team-items">
+                                    Tom Karlsson                                    
+                                </li>
+                                <li class="team-items">
+                                    Robert Minasyan
+                                </li>
+                                <li class="team-items">
+                                    Anton Rådberg
+                                </li>
+                            </ul>
+                            <div class="team-logos">
+                                <ul class="team-logo-list">
+                                    <li class="team-logo-item">
+                                        <i class="fa-solid fa-robot fa-beat fa-10x"></i>
+                                    </li>
+                                </ul>                                
+                            </div>
+                    </div>
                 </div>
             </div>
+
         </section>
         <section id="sprint">
-            <div class="container">
-                <div class="row">
+            <div class="container-list">
+                <div class="row-list">
                     <h1 class="sprint-title"><span class="text-purple">Sprints</span></h1>
                     <div class="sprint-list">
-                        <div class="sprint">
-                            Sprint 1
+                        <div class="sprint sprint-1">
+                            <h4 class="sprint-list-title">Sprint 1</h4>
+                            <ul class="sprint-item-list">
+                                <li class="sprint-items">
+                                    Move Robot
+                                </li>
+                                <li class="sprint-items">
+                                    World Generator
+                                <li class="sprint-items">
+                                    Camera Movement
+                                </li>
+                                <li class="sprint-items">
+                                    Program Robot
+                                </li>
+                                <li class="sprint-items">
+                                    Website version
+                                </li>
+                                <li class="sprint-items">
+                                    Multiplayer
+                                </li>
+                                <li class="sprint-items">
+                                    Menu
+                                </li>
+                            </ul>
                         </div>
-                        <div class="sprint">
-                            Sprint 2
+                        <div class="sprint sprint-2">
+                            <h4 class="sprint-list-title">Sprint 2</h4>
+                            <ul class="sprint-item-list">
+                                <li class="sprint-items">
+                                    Fire Weapon
+                                </li>
+                                <li class="sprint-items">
+                                    Robot Collision
+                                <li class="sprint-items">
+                                    Game Rounds
+                                </li>
+                                <li class="sprint-items">
+                                    Robot Energy
+                                </li>
+                                <li class="sprint-items">
+                                    HUD
+                                </li>
+                            </ul>
                         </div>
-                        <div class="sprint">
-                            Sprint 3
+                        <div class="sprint sprint-3">
+                            <h4 class="sprint-list-title">Sprint 3</h4>
+                            <ul class="sprint-item-list">
+                                <li class="sprint-items">
+                                    Walls
+                                </li>
+                                <li class="sprint-items">
+                                    New level design
+                                <li class="sprint-items">
+                                    Menu-Revamp
+                                </li>
+                                <li class="sprint-items">
+                                    Spectate Mode
+                                </li>
+                                <li class="sprint-items">
+                                    Player info
+                                </li>
+                            </ul>
                         </div>
-                        <div class="sprint">
-                            Sprint 4
+                        <div class="sprint sprint-4">
+                            <h4 class="sprint-list-title">Sprint 4</h4>
+                            <ul class="sprint-item-list">
+                                <li class="sprint-items">
+                                    Flags
+                                </li>
+                                <li class="sprint-items">
+                                    Bug-fixes
+                                <li class="sprint-items">
+                                    Scoreboard
+                                </li>
+                                <li class="sprint-items">
+                                    Refine Robot models
+                                </li>
+                                <li class="sprint-items">
+                                    Sound
+                                </li>
+                                <li class="sprint-items">
+                                    Refine UI
+                                </li>
+                                <li class="sprint-items">
+                                    World Editor
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -92,72 +201,24 @@
 
         </section>
 
-        <section id="projects">
+        <section id="project">
             <div class="container">
                 <div class="row">
-                    <h1 class="section-title"> Here are some of my <span class="text-purple">projects!</span></h1>
+                    <h1 class="section-title">Demo of the <span class="text-purple">project!</span></h1>
                     <ul class="project-list">
                         <li class="project">
                             <div class="project-wrapper">
-                                <img src="assets/undraw_nakamoto.svg" class="project-img" alt="Project 1">
-                                <div class="project-description">
-                                    <h3 class="project-description-title"></h3>
-                                    <h4 class="project-description-sub-title">
-                                        PostgreSQL, Java
-                                    </h4>
-                                    <p class="project-description-para">
-                                        Database created for KTH course IV1351 Data Storage Paradigms
-                                    </p>
-                                    <div class="project-description-links">
-                                        <a href="https://github.com/MilleAfRolen/IV1351" class="project-description-link">
-                                            <i class="fab fa-github"></i>
-                                        </a>
-                                    </div>
-                                </div>
+                                <img src="../TemplateData/main.png" class="project-img" alt="Project 1">
                             </div>
                         </li>
                         <li class="project">
                             <div class="project-wrapper">
-                                <img src="assets/undraw_connected_world.svg" class="project-img" alt="Project 1">
-                                <div class="project-description">
-                                    <h3 class="project-description-title"></h3>
-                                    <h4 class="project-description-sub-title">
-                                        Java
-                                    </h4>
-                                    <p class="project-description-para">
-                                        Created different servers in java for the KTH course IK1203 Network and communications
-                                    </p>
-                                    <div class="project-description-links">
-                                        <a href="https://github.com/MilleAfRolen/IK1203" class="project-description-link">
-                                            <i class="fab fa-github"></i>
-                                        </a>
-                                        <!--<a href="www.mywebsite.com" class="project-description-link">
-                                            <i class="fas fa-link"></i>
-                                        </a>-->
-                                    </div>
-                                </div>
+                                <img src="../TemplateData/level.png" class="project-img" alt="Project 1">
                             </div>
                         </li>
                         <li class="project">
                             <div class="project-wrapper">
-                                <img src="assets/undraw_programming.svg" class="project-img" alt="Project 1">
-                                <div class="project-description">
-                                    <h3 class="project-description-title"></h3>
-                                    <h4 class="project-description-sub-title">
-                                        Elixir
-                                    </h4>
-                                    <p class="project-description-para">
-                                        Different assignments solved for the KTH course ID1019 Programming 2
-                                    </p>
-                                    <div class="project-description-links">
-                                        <a href="https://github.com/MilleAfRolen/ID1019---Programming-2" class="project-description-link">
-                                            <i class="fab fa-github"></i>
-                                        </a>
-                                        <!--<a href="www.mywebsite.com" class="project-description-link">
-                                            <i class="fas fa-link"></i>
-                                        </a>-->
-                                    </div>
-                                </div>
+                                <img src="../TemplateData/battle.png" class="project-img" alt="Project 1">
                             </div>
                         </li>
                     </ul>
@@ -168,7 +229,7 @@
             <div class="row footer-row">
                 <a href="#" class="footer-anchor">
                     <figure class="footer-logo">
-                        <img src="assets/abstraction.jpg" class="footer-logo-image" alt="sus">
+                        <img src="../TemplateData/moose.png" class="footer-logo-image" alt="sus">
                     </figure>
                     <span class="footer-logo-popper">
                         Top <i class="fas fa-arrow-up"></i>
@@ -177,26 +238,23 @@
                 <div class="footer-social-list">
                     <a href="" class="
                     footer-social-link
-                    link-hover-effect
-                    link-hover-effect-white
-                    " target="_blank">Github</a>
-                    <a href="" class="
-                    footer-social-link
-                    link-hover-effect
-                    link-hover-effect-white
-                    " target="_blank">LinkedIn</a>
+                    link-hover
+                    link-hover-white
+                    " target="_blank">
+                        Github
+                        <i class="fab fa-github"></i>
+                    </a>
                     <a href="mailto:mille.af.rolen@gmail.com" class="
                     footer-social-link
-                    link-hover-effect
-                    link-hover-effect-white
-                    " target="_blank">Email</a>
-                    <a href="mailto:mille.af.rolen@gmail.com" class="
-                    footer-social-link
-                    link-hover-effect
-                    link-hover-effect-white
-                    " target="_blank">Resume</a>
+                    link-hover
+                    link-hover-white
+                    " target="_blank">
+                        Contact
+                        <i class="fa-regular fa-envelope"></i>    
+                    </a>
                 </div>
-                <div class="footer-copyright">E-portfolio inspired by David Braggs</div>
+                <div class="footer-copyright">Copyright © 2022 Team Elks</div>
+                <a class="icon-link" href="https://www.flaticon.com/free-icons/wild-life" title="wild life icons">Wild life icons created by surang - Flaticon</a>
             </div>
         </footer>
     </body>
