fixed and added download links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         ">Project</a>
                     </li>
                     <li>
-                        <a href="mailto:mille.af.rolen@gmail.com" class="
+                        <a href="mailto:robotelks@gmail.com" class="
                         nav-link
                         nav-link-primary
                         ">Contact</a>
@@ -54,12 +54,34 @@
                             during the execution phase. The main goal is to be the first to acquire 3 flags. 
                         </p>
                         <div class="about-me-links">
-                            <a href="https://www.github.com/milleafrolen" class="
+                            <h2 class="about-me-title text-purple"> Our source code and download links!</h2>
+                            <a href="https://www.github.com/robotelks" target="_blank" class="
                             about-me-link
                             link-hover
                             link-hover-black">
                                 Github
                                 <i class="fab fa-github"></i>
+                            </a>
+                            <a href="../TemplateData/MechanicalMoshpit.Windows.zip" download class="
+                            about-me-link
+                            link-hover
+                            link-hover-black">
+                                Windows
+                                <i class="fa-brands fa-windows"></i>
+                            </a>
+                            <a href="../TemplateData/MechanicalMoshpit.Mac.zip" download class="
+                            about-me-link
+                            link-hover
+                            link-hover-black">
+                                Mac
+                                <i class="fa-brands fa-apple"></i>
+                            </a>
+                            <a href="../TemplateData/MechanicalMoshpit.Linux.zip" download class="
+                            about-me-link
+                            link-hover
+                            link-hover-black">
+                                Linux
+                                <i class="fa-brands fa-linux"></i>
                             </a>
                         </div>
                     </div>
@@ -236,7 +258,7 @@
                     </span>
                 </a>
                 <div class="footer-social-list">
-                    <a href="" class="
+                    <a href="https://www.github.com/robotelks" class="
                     footer-social-link
                     link-hover
                     link-hover-white
@@ -244,7 +266,7 @@
                         Github
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="mailto:mille.af.rolen@gmail.com" class="
+                    <a href="mailto:robotelks@gmail.com" class="
                     footer-social-link
                     link-hover
                     link-hover-white
