--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
                                 Github
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="../TemplateData/MechanicalMoshpit.Windows.zip" download class="
+                            <a href="https://github.com/RobotElks/MechanicalMoshpit/releases/download/v1.0/MechanicalMoshpit.Windows.zip" class="
                             about-me-link
                             link-hover
                             link-hover-black">
                                 Windows
                                 <i class="fa-brands fa-windows"></i>
                             </a>
-                            <a href="../TemplateData/MechanicalMoshpit.Mac.zip" download class="
+                            <a href="https://github.com/RobotElks/MechanicalMoshpit/releases/download/v1.0/MechanicalMoshpit.macOS.zip" class="
                             about-me-link
                             link-hover
                             link-hover-black">
                                 Mac
                                 <i class="fa-brands fa-apple"></i>
                             </a>
-                            <a href="../TemplateData/MechanicalMoshpit.Linux.zip" download class="
+                            <a href="https://github.com/RobotElks/MechanicalMoshpit/releases/download/v1.0/MechanicalMoshpit.Linux.zip" class="
                             about-me-link
                             link-hover
                             link-hover-black">
