--- a/index.html
+++ b/index.html
@@ -227,7 +227,30 @@
             <div class="container">
                 <div class="row">
                     <h1 class="section-title">Demo of the <span class="text-purple">project!</span></h1>
+                    <p class="about-me-para">
+                        During the Project Expo 2022 we will be streaming <strong class="text-purple"> Live on Twitch </strong> at 10am, 11am, 1pm, 2pm, and 3pm for 20-30 minutes.
+                        You can watch using the embedded player bellow, or got to the <a href="https://www.twitch.tv/robotelks" class="
+                        about-me-link
+                        link-hover
+                        link-hover-black">
+                            Channel! 
+                        </a>
+                        Come join us for a game or two, or ask your questions in the chat! 
+
+                        At other times during the expo you can find us on <a href="https://kth-se.zoom.us/j/66926146952" class="
+                        about-me-link
+                        link-hover
+                        link-hover-black">
+                            Zoom!
+                            <i class="fa-brands fa-linux"></i>
+                        </a>
+                    </p>
                     <ul class="project-list">
+                        <li class="project">
+                            <div class="project-wrapper">
+                                <iframe src="https://player.twitch.tv/?channel=robotelks&parent=robotelks.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                            </div>
+                        </li>
                         <li class="project">
                             <div class="project-wrapper">
                                 <img src="../TemplateData/main.png" class="project-img" alt="Project 1">
