--- a/index.html
+++ b/index.html
@@ -238,19 +238,19 @@
                     During the Project Expo 2022 we will be streaming <strong class="text-purple"> Live on Twitch
                     </strong> at 10am, 11am, 1pm, 2pm, and 3pm for 20-30 minutes.
                     You can watch using the embedded player bellow, or got to the<a
-                        href="https://www.twitch.tv/robotelks" class="
+                        href="https://www.twitch.tv/robotelks" target="_blank" class="
                         about-me-link
                         link-hover
-                        link-hover-black">
+                        link-hover-black" >
                         Channel!
                     </a>Come join us for a game or two, or ask your questions in the chat!
                 </p>
                 <p class="about-me-para">
-                    You can also find us on<a href="https://kth-se.zoom.us/j/66926146952"
+                    You can also find us on<a href="https://kth-se.zoom.us/j/66926146952" target="_blank"
                         class="
                         about-me-link
                         link-hover
-                        link-hover-black">
+                        link-hover-black" >
                         Zoom!
                     </a> during the expo
                 </p>
